--- a/scripts/components/road/tpls/specialwork/roadNameTpl.htm
+++ b/scripts/components/road/tpls/specialwork/roadNameTpl.htm
@@ -44,11 +44,11 @@
 		    </div>
 		</div>
 		<div ng-show="editPanel!=false" class="div-float" style="top:20px;left:20px;width:1000px;border-radius:5px;">
-	        <button type="button" class="close" style="padding:0px 4px;" ng-click="closeEditPanel()"><span>&times;</span></button>
+	        <button type="button" class="close" style="padding:0px 4px;font-size:28px;color:white;opacity:1;" ng-click="closeEditPanel()"><span>&times;</span></button>
 	        <div ng-include="roadNameEditPanelTpl"></div>
 	    </div>
 	    <div ng-show="subModal!=false" class="div-float" style="top:80px;left:120px;min-width:600px;max-width:1000px;border-radius:5px;">
-	        <button type="button" class="close" style="padding:0px 4px;" ng-click="closeSubModal()"><span>&times;</span></button>
+	        <button type="button" class="close" style="padding:0px 4px;font-size:28px;color:white;opacity:1;" ng-click="closeSubModal()"><span>&times;</span></button>
 	        <div ng-include="subModalTpl"></div>
 	    </div>
     </div>
