精编，POI运动场馆深度信息编辑

--- a/less/editor.less
+++ b/less/editor.less
@@ -1876,6 +1876,9 @@ form input[type=checkbox].ng-dirty:before {
     }
 }
 
+.menuActive{
+  color: rgba(255, 255, 255, 0.5);
+}
 .table-input{
   color: white;
   background-color: black;
@@ -1883,3 +1886,5 @@ form input[type=checkbox].ng-dirty:before {
   font-size: 12px;
   padding: 2px 4px;
 }
+
+
