--- a/scripts/components/poi/tpls/attr-base/baseInfoTpl.html
+++ b/scripts/components/poi/tpls/attr-base/baseInfoTpl.html
@@ -65,7 +65,7 @@
                             </div>
                         </li>
                         <li>
-                            <label >室内POI</label>
+                            <label >内部POI</label>
                             <div>
                                 <label>
                                     <input fm-edit-view type="radio" name="indoor" value="3" ng-model="poi.indoor">
