--- a/scripts/components/poi/tpls/attr-deep/sportsVenuesTpl.html
+++ b/scripts/components/poi/tpls/attr-deep/sportsVenuesTpl.html
@@ -7,7 +7,7 @@
                         <label>场馆类型</label>
                         <div class="block">
                             <label ng-repeat="(key, value) in sportsVenuesBuildingType" ng-if="true">
-                                <input type="checkbox" value="{{key}}" ng-model="poi.label[key]"> {{value}}
+                                <input type="checkbox" value="{{key}}" ng-model="poi.sportsVenue[key]"> {{value}}
                             </label>
                         </div>
                     </li>
