--- a/scripts/components/road/tpls/specialwork/roadNameTpl.htm
+++ b/scripts/components/road/tpls/specialwork/roadNameTpl.htm
@@ -1,48 +1,40 @@
 <div ng-controller="RoadNameCtl">
     <div class="fm-panel">
-    	<div class="content">
-		    <div style="height: 100%;position: absolute;left: 0;right: 0;top: 0;overflow-y: hidden;z-index: -1">
-		        <div class="fm-table-content fm-fitsize scroll-styled" style="top:0px;bottom: 70px">
-			        <div id="box" class="table-header">
-			        	<div style="padding: 40px 0px 10px 10px" class=" pull-left">
-			        		<button type="button" class="btn btn-shape" ng-click="openSubModal('search')">查询 </button>
-				            <button type="button" class="btn btn-shape" ng-click="openSubModal('add')">新增 </button>
-				            <button type="button" class="btn btn-shape" ng-click="openSubModal('split')">拆分</button>
-				        	<button type="button" class="btn btn-shape" ng-click="openSubModal('check')">检查 </button>
-			            </div>
-			            <div class="pull-right">
-					        <div style="padding: 40px 60px 0px 10px" class="btn-group dropdown" uib-dropdown on-toggle="toggled(open)" auto-close="outsideClick">
-					            <button type="button" class="btn dropdown-toggle btn-xs fm-xs-btn" uib-dropdown-toggle aria-haspopup="true" aria-expanded="true">
-					                <i class="glyphicon glyphicon-th icon-th"></i> <span class="caret"></span>
-					            </button>
-					            <ul class="dropdown-menu fm-dropdown-menu" uib-dropdown-menu aria-labelledby="simple-dropdown">
-					                <li ng-repeat="col in cols">
-					                    <label class="checkbox-inline">
-					                        <input type="checkbox" ng-model-options="{getterSetter: true}" ng-model="col.show"/> {{col.title}}
-					                    </label>
-					                </li>
-					            </ul>
-					        </div>
-			            </div>
-			        </div>
-                    <script type="text/ng-template" id="headerCheckbox.html">
+        <div class="content fm-table-content fm-fitsize scroll-styled" style="top:0px;bottom: 70px">
+	        <div class="table-header" style="margin:10px 0px 10px 0px">
+        		<button type="button" class="btn btn-shape" ng-click="openSubModal('search')">查询 </button>
+	            <button type="button" class="btn btn-shape" ng-click="openSubModal('add')">新增 </button>
+	            <button type="button" class="btn btn-shape" ng-click="openSubModal('split')">拆分</button>
+	        	<button type="button" class="btn btn-shape" ng-click="openSubModal('check')">检查 </button>
+		        <div class="pull-right btn-group dropdown" uib-dropdown on-toggle="toggled(open)" auto-close="outsideClick">
+		            <button type="button" class="btn dropdown-toggle btn-xs fm-xs-btn" style="height:33px;width:36px;" uib-dropdown-toggle aria-haspopup="true" aria-expanded="true">
+		                <i class="glyphicon glyphicon-th icon-th"></i> <span class="caret"></span>
+		            </button>
+		            <ul class="dropdown-menu dropdown-menu-right fm-dropdown-menu" uib-dropdown-menu aria-labelledby="simple-dropdown">
+		                <li ng-repeat="col in cols">
+		                    <label class="checkbox-inline">
+		                        <input type="checkbox" ng-model-options="{getterSetter: true}" ng-model="col.show"/> {{col.title}}
+		                    </label>
+		                </li>
+		            </ul>
+		        </div>
+	        </div>
+                  <script type="text/ng-template" id="headerCheckbox.html">
                         <input type="checkbox" ng-model="checkboxes.checked" class="select-all" value="" />
                     </script>
-		            <table ng-table-dynamic="tableParams with cols" class="table table-condensed table-bordered">
-		                <colgroup>
-		                    <col ng-repeat="col in cols | filter:{show: true}" width="{{col.width || '100px'}}"/>
-		                </colgroup>
-		                <tr ng-repeat="row in $data" ng-dblClick="openEditPanel(row,$index)" ng-class="{true:'tr-backcolor',false:''}[row.checked]">
-		                    <td ng-repeat="col in $columns" ng-switch="col.field">
-                                <input ng-switch-when="selector" type="checkbox" ng-model="row.checked" />
-		                        <p class="text-ellipsis" title="{{row[col.field]}}" ng-bind-html="col.getValue?col.getValue(this,row):row[col.field]"></p>
-		                    </td>
-		                </tr>
-		                <tr class="text-center" ng-show="!$data.length"><td colspan="{{(cols | filter: {show: true}).length}}" ng-bind="loadTableDataMsg"></td></tr>
-		            </table>
-		        </div>
-		    </div>
-		</div>
+            <table ng-table-dynamic="tableParams with cols" class="table table-condensed table-bordered">
+                <colgroup>
+                    <col ng-repeat="col in cols | filter:{show: true}" width="{{col.width || '100px'}}"/>
+                </colgroup>
+                <tr ng-repeat="row in $data" ng-dblClick="openEditPanel(row,$index)" ng-class="{true:'tr-backcolor',false:''}[row.checked]">
+                    <td ng-repeat="col in $columns" ng-switch="col.field">
+                              <input ng-switch-when="selector" type="checkbox" ng-model="row.checked" />
+                        <p class="text-ellipsis" title="{{row[col.field]}}" ng-bind-html="col.getValue?col.getValue(this,row):row[col.field]"></p>
+                    </td>
+                </tr>
+                <tr class="text-center" ng-show="!$data.length"><td colspan="{{(cols | filter: {show: true}).length}}" ng-bind="loadTableDataMsg"></td></tr>
+            </table>
+        </div>
 		<div ng-show="editPanel!=false" class="div-float" style="top:20px;left:20px;width:1000px;border-radius:5px;">
 	        <button type="button" class="close" style="padding:0px 4px;font-size:28px;color:white;opacity:1;" ng-click="closeEditPanel()"><span>&times;</span></button>
 	        <div ng-include="roadNameEditPanelTpl"></div>
