--- a/scripts/components/poi/tpls/attr-deep/commonDeepTimeTpl.html
+++ b/scripts/components/poi/tpls/attr-deep/commonDeepTimeTpl.html
@@ -1,26 +1,59 @@
 <style type="text/css">
+    /*复写editor的css*/
+    .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9 {
+        position: relative;
+        min-height: 1px;
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+    /*修改周营业日checkbox按钮的样式*/
+    .btn-weekday {
+        color: #fff;
+        background-color: #555;
+        border: 1px solid #cccccc;
+        text-shadow: 0 -1px 0 rgba(0, 0, 0, .2);
+        -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, .15), 0 1px 1px rgba(0, 0, 0, .075);
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, .15), 0 1px 1px rgba(0, 0, 0, .075);
+    }
+    .weekTime .btn{
+        padding: 3px 7px;
+    }
+    .weekTime .btn:first-child, .weekTime .btn:last-child {
+        padding: 3px 8px;
+    }
+    .btn-weekday.btn:active, .btn-weekday.btn.active {
+        background-image: none;
+        outline: 0;
+        -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+        box-shadow: inset 0 5px 5px rgba(0, 0, 0, .125);
+        background: rgba(0, 0, 0, 0.85);
+    }
+    /*----------------------修改datepicker的样式---------------------*/
+    /*时间控件背景色*/
+    .dropdown-menu{
+        background-color: #555 !important;
+    }
+    .timelist .uib-button-bar button.btn-info,
+    .timelist .uib-button-bar button.btn-danger,
+    .timelist .uib-button-bar button.btn-success{
+        color: #fff;
+        background-color: #555;
+        border-color: #ccc!important;
+        background-image: none !important;
+    }
+
+    /*修改datepicker的样式*/
     .carTypeTip > .form-group > .btn-group > label {
         transition: all 0.5s;
         padding: 5px;
         border-radius: 0;
     }
-
-    .arrow_right {
-        position: absolute;
-        background: url('../../../scripts/libs/timepicki/images/top_arr_dark.png') no-repeat;
-        width: 18px;
-        height: 10px;
-        z-index: 3;
-        right: -14px;
-        top: 100px;
-        transform: rotate(90deg);
-    }
     .carTypeTip {
-        width: 270px;
+        width: 320px;
         display: none;
-        padding: 10px;
-        padding-bottom: 0;
-        margin-top: 10px;
+        margin-top: 0px;
+        padding-bottom: 10px;
+        padding-top: 5px;
         box-shadow: 1px 1px 10px 0 #080808;
         background-color: #555;
         opacity: 1;
@@ -40,19 +73,13 @@
         -webkit-transition: margin .15s ease-in-out;
         -moz-transition: margin .15s ease-in-out;
     }
-
-    .slide-well {
-        border: 1px solid #ddd;
-        padding: 10px 5px;
-        border-radius: 3px;
-        background-color: #494949;
-        height:300px;
-        overflow-y: auto;
-    }
     input.selectMd{
         height: 24px;
         background: #333;
         color: #fff;
+    }
+    .form-control[readonly]{
+        background: #333;
     }
     button.dateButton{
         padding: 1px 6px;
@@ -68,65 +95,163 @@
     input.dayTime{
         background: #333;
         border-radius: 4px;
-        width: 35px;
+        width: 100px;
         border: 1px solid #ccc;
+        text-indent: 5px;
+    }
+    .timelist{
+        padding-top: 7px;
+    }
+    .clearfix:after{
+        visibility: hidden;
+        display: block;
+        font-size: 0;
+        content: ".";
+        clear: both;
+        height: 0;
+    }
+    .timeBox{
+        width: 124px;
+        height: 102px;
+        background: #555;
+        position: absolute;
+        display: none;
+        z-index: 10000;
+        opacity: 0.9;
+    }
+    .timeBox table{
+        margin-left: 12px;
+        width: 100px;
+    }
+    /*复写样式*/
+    .timeBox .form-control {
+        display: block;
+        width: 100%;
+        height: 34px;
+        padding: 6px 12px;
+        font-size: 14px;
+        line-height: 1.42857143;
+        color: #fff;
+        background-color: #333;
+        background-image: none;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+        box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+        -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+        -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+        transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    }
+    .timeBox .btn-link {
+        font-weight: normal;
+        color: #fff;
+        border-radius: 0;
+    }
+    .timehandle div{
+        height: 25px;
+        line-height: 25px;
+        text-align: center;
+        background: #3f3f3f;
+        color: white;
+        cursor: pointer;
+    }
+    /*弹框箭头的样式*/
+    .arrow_right {
+        position: absolute;
+        background: url('../../../scripts/libs/timepicki/images/top_arr_dark.png') no-repeat;
+        width: 18px;
+        height: 10px;
+        z-index: 3;
+        right: -14px;
+        top: 115px;
+        transform: rotate(90deg);
+    }
+    .arrow_top{
+        position: absolute;
+        background: url('../../../scripts/libs/timepicki/images/top_arr_dark.png') no-repeat;
+        width: 18px;
+        height: 10px;
+        z-index: 3;
+        right: -14px;
+        top: -10px;
+        left: 52px;
+        transform: rotate(0deg);
     }
 </style>
-<div class="date-well" style="border: none" ng-controller="commonDeepTimeController">
-    <div class="carTypeTip">
-        <div class="pull-left" style="margin-top: -8px;color: #FFF;">{{currentHandleStatus}}营业时间 {{currentHandleTimeDataIndex+1}}</div>
-        <div class="pull-right" style="margin-top: -10px;">
-            <button type="button" class="close" aria-label="Close" ng-click="hidePopover(this);" style="color: #fff;opacity: 1;margin-top: -4px;margin-right: -8px;">
-                <span aria-hidden="true">&times;</span>
-            </button>
+<div class="timeSelect-panel" ng-controller="commonDeepTimeController">
+    <div class="container carTypeTip">
+        <div class="row timelist">
+            <div class="col-md-12">
+                <div class="pull-left">{{currentHandleStatus}}营业时间 {{currentHandleTimeDataIndex+1}}</div>
+                <div class="pull-right">
+                    <button type="button" class="close" aria-label="Close" ng-click="hidePopover(this);" style="color: #fff;opacity: 1;margin-top: -4px;">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            </div>
         </div>
-        <div class="clearfix"></div>
-        <div style="height: 230px">
-            <div class="dataDivList">
+        <form name="dayTimeForm">
+            <!-- 开始月日时间选择 -->
+            <div class="row timelist">
                 <div class="col-md-3">开始月日</div>
                 <div class="col-md-9">
                     <div class="input-group">
-                        <input type="text" class="form-control selectMd" uib-datepicker-popup="{{format}}" ng-model="dt" is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" />
-                    <span class="input-group-btn">
-                        <button type="button" class="btn btn-default dateButton" ng-click="open1()"><i class="glyphicon glyphicon-calendar"></i></button>
-                    </span>
+                        <input readonly="readonly" type="text" class="form-control selectMd" uib-datepicker-popup ng-model="TimeSelectModel.startOpenMonthDay" is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="关闭" />
+                        <span class="input-group-btn">
+                            <button type="button" class="btn btn-default dateButton" ng-click="open1()"><i class="glyphicon glyphicon-calendar"></i></button>
+                        </span>
                     </div>
                 </div>
             </div>
-            <div class="dataDivList">
+            <!-- 结束月日时间选择 -->
+            <div class="row timelist">
                 <div class="col-md-3">结束月日</div>
                 <div class="col-md-9">
                     <div class="input-group">
-                        <input type="text" class="form-control selectMd" uib-datepicker-popup="{{format}}" ng-model="dt" is-open="popup1.opened" datepicker-options="dateOptions" ng-required="true" close-text="Close" alt-input-formats="altInputFormats" />
-                    <span class="input-group-btn">
-                        <button type="button" class="btn btn-default dateButton" ng-click="open2()"><i class="glyphicon glyphicon-calendar"></i></button>
-                    </span>
+                        <input readonly="readonly" type="text" class="form-control selectMd" uib-datepicker-popup ng-model="TimeSelectModel.endOpenMonthDay" is-open="popup2.opened" datepicker-options="dateOptions" ng-required="true" close-text="关闭" />
+                        <span class="input-group-btn">
+                            <button type="button" class="btn btn-default dateButton" ng-click="open2()"><i class="glyphicon glyphicon-calendar"></i></button>
+                        </span>
                     </div>
                 </div>
             </div>
-            <!-- -->
-            <div class="dataDivList">
+            <!-- 周营业日复选 -->
+            <div class="row timelist">
                 <div class="col-md-3">周营业日</div>
                 <div class="col-md-9">
-                    <div class="btn-group d-btn" data-toggle="buttons" style="width: 100%;">
-                        <label class="btn week-group" check-code='{{week.code}}'
-                               check-name="{{week.name}}" check-value="{{week.value}}" ng-repeat="week in wks.values"
-                               style="font-size: 12px;width: 14.28%;">
-                            {{week.value}}
-                        </label>
+                    <div class="btn-group weekTime">
+                        <label ng-repeat="week in TimeSelectModel.weekOpenDays" class="btn btn-weekday" ng-model="week.status" uib-btn-checkbox>{{week.value}}</label>
                     </div>
                 </div>
             </div>
-            <!---->
-            <div class="dataDivList">
-                <div class="col-md-3">营业时间</div>
-                <div class="col-md-9">
-                    <div class="dataDivList"><input ng-click="selectTime($event)" class="dayTime" type="text" /> : <input class="dayTime" type="text" /> ~ <input class="dayTime" type="text" /> : <input class="dayTime" type="text" /></div>
-                    <div class="dataDivList"><input class="dayTime" type="text" /> : <input class="dayTime" type="text" /> ~ <input class="dayTime" type="text" /> : <input class="dayTime" type="text" /></div>
-                        <div class="dataDivList"><input class="dayTime" type="text" /> : <input class="dayTime" type="text" /> ~ <input class="dayTime" type="text" /> : <input class="dayTime" type="text" /></div>
+            <!-- 日营业时间input -->
+            <div class="row timelist">
+                <div class="col-md-12">
+                    <div class="pull-left">日营业时间列表</div>
+                    <i style="cursor: pointer" class="glyphicon glyphicon-plus pull-right" ng-click="addDayTime()" aria-hidden="true"></i>
+                </div>
+                <div class="col-md-12">
+                    <div ng-repeat="dayTimeItem in TimeSelectModel.dayOpenTimeZones" class="timelist">
+                        <i class="fa fa-calendar-check-o" aria-hidden="true"></i>
+                        <input readonly="readonly" data-type="start" ng-click="showTimePicker($event,$index,'start')" ng-model="dayTimeItem.start | date:'shortTime'" class="dayTime" type="text" />
+                        ~
+                        <i class="fa fa-calendar-times-o" aria-hidden="true"></i>
+                        <input readonly="readonly" data-type="end" ng-click="showTimePicker($event,$index,'end')" ng-model="dayTimeItem.end | date:'shortTime'" class="dayTime" type="text" />
+                        <i style="cursor: pointer" title="删除" ng-click="removeDayTimeZone($index)" class="glyphicon glyphicon-remove-circle pull-right"></i></div>
                 </div>
             </div>
-        </div>
-        <div class='arrow_right'></div>
+            <!-- 右箭头 -->
+            <div class='arrow_right'></div>
+            <!-- 时间选择弹框 -->
+            <div class="timeBox">
+                <div  uib-timepicker ng-model="TimeSelectModel.dayOpenTimeZones[currentDataIndex][currentDataFlag]" ng-change="changed()" show-meridian=false></div>
+                <div class="timehandle">
+                    <div style="border-right: 1px solid #777;" ng-click="setDayTimeValue($event)" class="col-md-6">确定</div>
+                    <div class="col-md-6" ng-click="closeTimeHandle()">取消</div>
+                </div>
+                <div class='arrow_top'></div>
+            </div>
+
+        </form>
     </div>
 </div>
