--- a/scripts/components/poi/tpls/attr-base/baseInfoTpl.html
+++ b/scripts/components/poi/tpls/attr-base/baseInfoTpl.html
@@ -29,7 +29,7 @@
                                 <select fm-edit-view class="fm-control" ng-model="selectedKind"
                                         no_results_text="'没有找到'"  placeholder_text_single="'--请选择--'" search_contains=true
                                         ng-options="value as lable.kindName for (value, lable) in metaData.kindFormat"
-                                        chosen ng-change="kindChange($event, this)">
+                                        chosen ng-change="kindChange($event, this)" ng-disabled="isSpecialOperation">
                                 </select>
                             </div>
                         </li>
@@ -45,9 +45,9 @@
                         </li>
                         <li>
                             <label>等 级</label>
-                            <div>
+                            <div class="lv-container">
                                 <label ng-repeat="lev in levelArr">
-                                    <input fm-edit-view type="radio" class="lv-radio" ng-model="poi.level" value="{{lev}}"> {{lev}}
+                                    <input fm-edit-view type="radio" class="lv-radio" ng-model="poi.level" value="{{lev}}" ng-disabled="isSpecialOperation"> {{lev}}
                                 </label>
                             </div>
                         </li>
@@ -101,12 +101,12 @@
                     <ul class="fm-ul fm-ul-list">
                         <li ng-repeat="item in poi.contacts">
                             <div>
-                                <input type='text' class="fm-control tel-code" ng-class="{'tel-empty':controlFlag.isTelEmptyArr[$index] }" maxlength="5" ng-model="item.code" ng-show="item.contactType==1">
+                                <input type='text' class="fm-control tel-code" ng-class="{'tel-empty':controlFlag.isTelEmptyArr[$index] ,'chosen-disabled':isSpecialOperation}" maxlength="5" ng-model="item.code" ng-show="item.contactType==1" ng-disabled="isSpecialOperation">
                                 <span ng-show="item.contactType==1"> - </span>
-                                <input type='text' ng-class="{'fm-control': true, 'tel-number': true, 'tel-cellphone': item.contactType == 2,'tel-empty':controlFlag.isTelEmptyArr[$index] }" maxlength="11" ng-blur="checkTelNo($index,$event)" ng-model="item.contact">
+                                <input type='text' ng-class="{'fm-control': true, 'tel-number': true, 'tel-cellphone': item.contactType == 2,'tel-empty':controlFlag.isTelEmptyArr[$index] ,'chosen-disabled':isSpecialOperation}" maxlength="11" ng-blur="checkTelNo($index,$event)" ng-model="item.contact" ng-disabled="isSpecialOperation">
                             </div>
                             <div>
-                                <a href="javascript:void(0);" ng-click="deleteContact($index);"><i class="glyphicon glyphicon-remove-sign"></i></a>
+                                <a href="javascript:void(0);" ng-click="deleteContact($index);" ng-if="!isSpecialOperation"><i class="glyphicon glyphicon-remove-sign"></i></a>
                             </div>
                         </li>
                     </ul>
@@ -115,4 +115,3 @@
         </div>
     </div>
 </div>
-
