--- a/scripts/components/road/tpls/specialwork/adminTableTpl.htm
+++ b/scripts/components/road/tpls/specialwork/adminTableTpl.htm
@@ -2,7 +2,7 @@
     <div class="title">请选择行政区化</div>
     <div class="content" >
         <div style="height:400px;">
-			<div class="fm-table-content fm-fitsize scroll-styled" style="top:40px;bottom: 70px">
+			<div class="fm-subtable-content fm-fitsize scroll-styled" style="top:40px;bottom: 70px">
 		        <div class="table-header">
 			        <div class="table-search fm-inline" style="padding: 10px 50px 10px 10px" class="pull-left">
 			            <div class="btn-group">
@@ -27,9 +27,9 @@
 	            </table>
 	        </div>
         </div>
-        <div style="border-bottom: 1px solid #ddd;"></div>
+        <!-- <div style="border-bottom: 1px solid #ddd;"></div>
         <div style="text-align:right;">
             <button type="button" class="btn btn-main" ng-disabled="running" ng-click="doChoice()">选择</button>
-        </div>
+        </div> -->
     </div>
 </div>
