--- a/scripts/components/road/tpls/specialwork/splitSubModalTpl.htm
+++ b/scripts/components/road/tpls/specialwork/splitSubModalTpl.htm
@@ -1,32 +1,27 @@
 <div class="fm-panel" ng-controller="SplitSubModalCtl" style="margin:0px;width:330px;">
-	<button type="button" class="close" style="padding:0px 4px;" ng-click="closeSubModal()"><span>&times;</span></button>
-    <div class="title">选择要检查的数据</div>
+	<!-- <button type="button" class="close" style="padding:0px 4px;" ng-click="closeSubModal()"><span>&times;</span></button> -->
+    <div class="title">选择数据范围</div>
     <div class="content" >
-        <div style="height:200px;">
-			<ul class="fm-ul fm-ul-form">
-                <li>
-                    <label>检查的数据为:</label>
-                    <div class="block">
-                        <div>
-                                <label>
-                                    <input type="radio" name="dataFlag" value="1" ng-model="dataFlag">
-                                    选中的数据
-                                </label>
-                                </br>
-                                </br>
-                                </br>
-                                <label>
-                                    <input type="radio" name="dataFlag" value="2" ng-model="dataFlag">
-                                    所有的数据
-                                </label>
-                            </div>
+        <div style="height:150px;">
+            <div class="block">
+                <div style="margin:60px 80px">
+                        <label>
+                            <input type="radio" name="dataFlag" value="1" ng-model="dataFlag">
+                            选中的数据
+                        </label>
+                        </br>
+                        </br>
+                        </br>
+                        <label>
+                            <input type="radio" name="dataFlag" value="2" ng-model="dataFlag">
+                            所有的数据
+                        </label>
                     </div>
-                </li>
-            </ul>
+            </div>
         </div>
-        <div style="border-bottom: 1px solid #ddd;"></div>
-        <div style="text-align:right;">
-            <button type="button" class="btn btn-main" ng-disabled="running" ng-click="doSplit()">确定</button>
-        </div>
+    </div>
+    <div style="border-bottom: 1px solid #ddd;"></div>
+    <div style="text-align:right;">
+        <button type="button" class="btn btn-main" ng-disabled="running" ng-click="doSplit()" style="margin:6px 8px">确定</button>
     </div>
 </div>
