--- a/less/editor.less
+++ b/less/editor.less
@@ -1886,5 +1886,13 @@ form input[type=checkbox].ng-dirty:before {
   font-size: 12px;
   padding: 2px 4px;
 }
+.fm-subtable-content {
+  width: 100%;
+  padding-left: 5px;
+  padding-right: 5px;
+}
+.fm-subtable-content table + div{
+  position: fixed;
+}
 
 
