--- a/scripts/components/road/tpls/specialwork/roadNameTpl.htm
+++ b/scripts/components/road/tpls/specialwork/roadNameTpl.htm
@@ -4,7 +4,7 @@
 	        <div class="table-header" style="margin:10px 0px 10px 0px">
         		<button type="button" class="btn btn-shape" ng-click="openSubModal('search')">查询 </button>
 	            <button type="button" class="btn btn-shape" ng-click="openSubModal('add')">新增 </button>
-	            <button type="button" class="btn btn-shape" ng-click="openSubModal('split')">拆分</button>
+	            <button type="button" class="btn btn-shape" ng-click="openSplitSubModal('split')">拆分</button>
 	        	<button type="button" class="btn btn-shape" ng-click="openSubModal('check')">检查 </button>
 		        <div class="pull-right btn-group dropdown" uib-dropdown on-toggle="toggled(open)" auto-close="outsideClick">
 		            <button type="button" class="btn dropdown-toggle btn-xs fm-xs-btn" style="height:33px;width:36px;" uib-dropdown-toggle aria-haspopup="true" aria-expanded="true">
@@ -35,13 +35,17 @@
                 <tr class="text-center" ng-show="!$data.length"><td colspan="{{(cols | filter: {show: true}).length}}" ng-bind="loadTableDataMsg"></td></tr>
             </table>
         </div>
-		<div ng-show="editPanel!=false" class="div-float" style="top:20px;left:20px;width:1000px;border-radius:5px;">
+		<div ng-show="editPanel" class="div-float" style="top:20px;left:20px;width:1000px;border-radius:5px;">
 	        <button type="button" class="close" style="padding:0px 4px;font-size:28px;color:white;opacity:1;" ng-click="closeEditPanel()"><span>&times;</span></button>
 	        <div ng-include="roadNameEditPanelTpl"></div>
 	    </div>
-	    <div ng-show="subModal!=false" class="div-float" style="top:80px;left:120px;min-width:600px;max-width:1000px;border-radius:5px;">
+	    <div ng-show="subModal" class="div-float" style="top:80px;left:120px;min-width:600px;max-width:1000px;border-radius:5px;">
 	        <button type="button" class="close" style="padding:0px 4px;font-size:28px;color:white;opacity:1;" ng-click="closeSubModal()"><span>&times;</span></button>
 	        <div ng-include="subModalTpl"></div>
+	    </div>
+	    <div ng-show="splitSubModal" class="div-float" style="top:80px;left:120px;border-radius:5px;">
+	        <button type="button" class="close" style="padding:0px 4px;font-size:28px;color:white;opacity:1;" ng-click="closeSplitSubModal()"><span>&times;</span></button>
+	        <div ng-include="splitSubModalTpl"></div>
 	    </div>
     </div>
 </div>
