推送消息查看

--- a/less/editor.less
+++ b/less/editor.less
@@ -848,6 +848,12 @@ a.fm-panel-controlArrowLeft > span, a.fm-panel-controlArrowRight > span {
   animation-fill-mode: both;
 }
 
+.animated-slow {
+  -webkit-animation-duration: 3s !important;
+  animation-duration: 3s !important;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
 
 /*重写了部分angular-chosen的样式*/
 
@@ -1886,5 +1892,3 @@ form input[type=checkbox].ng-dirty:before {
   font-size: 12px;
   padding: 2px 4px;
 }
-
-
