--- a/styles/imeep/editor.css
+++ b/styles/imeep/editor.css
@@ -713,6 +713,12 @@ a.fm-panel-controlArrowRight > span {
   -webkit-animation-fill-mode: both;
   animation-fill-mode: both;
 }
+.animated-slow {
+  -webkit-animation-duration: 3s !important;
+  animation-duration: 3s !important;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
 /*重写了部分angular-chosen的样式*/
 .chosen-container {
   font-size: 12px;
