绘制任务列表

--- a/less/editor.less
+++ b/less/editor.less
@@ -1887,4 +1887,20 @@ form input[type=checkbox].ng-dirty:before {
   padding: 2px 4px;
 }
 
+/*深度信息任务列表嵌套ul/li样式*/
+ul.fm-ul-insert {
+  font-size: 14px;
+  list-style: none;
+  padding: 10px 0 0 15px;
+  margin: 0;
+}
+ul.fm-ul-insert ul{
+  list-style: none;
+  padding-left: 25px;
+  font-size: 12px;
+}
+ul.fm-ul-insert ul li{
+  padding: 5px 0 3px 0;
+}
+
 
